k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-mcp-mimir
  labels:
    environment: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        environment: dev
    spec:
      containers:
        - name: mcp-mimir
          image: "escoacrprod01.azurecr.io/sample/sample-mimir-mcp:v1.0.0-snapshot"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
